0.8.0/_sources/generated/statsmodels.tsa.statespace.dynamic_factor.DynamicFactorResults.rst.txt
statsmodels.tsa.statespace.dynamic_factor.DynamicFactorResults
==============================================================

.. currentmodule:: statsmodels.tsa.statespace.dynamic_factor

.. autoclass:: DynamicFactorResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~DynamicFactorResults.aic
    
    
      ~DynamicFactorResults.bic
    
    
      ~DynamicFactorResults.bse
    
    
      ~DynamicFactorResults.coefficients_of_determination
    
    
      ~DynamicFactorResults.conf_int
    
    
      ~DynamicFactorResults.cov_params
    
    
      ~DynamicFactorResults.cov_params_approx
    
    
      ~DynamicFactorResults.cov_params_oim
    
    
      ~DynamicFactorResults.cov_params_opg
    
    
      ~DynamicFactorResults.cov_params_robust
    
    
      ~DynamicFactorResults.cov_params_robust_approx
    
    
      ~DynamicFactorResults.cov_params_robust_oim
    
    
      ~DynamicFactorResults.f_test
    
    
      ~DynamicFactorResults.fittedvalues
    
    
      ~DynamicFactorResults.forecast
    
    
      ~DynamicFactorResults.get_forecast
    
    
      ~DynamicFactorResults.get_prediction
    
    
      ~DynamicFactorResults.hqic
    
    
      ~DynamicFactorResults.impulse_responses
    
    
      ~DynamicFactorResults.initialize
    
    
      ~DynamicFactorResults.llf
    
    
      ~DynamicFactorResults.llf_obs
    
    
      ~DynamicFactorResults.load
    
    
      ~DynamicFactorResults.loglikelihood_burn
    
    
      ~DynamicFactorResults.normalized_cov_params
    
    
      ~DynamicFactorResults.plot_coefficients_of_determination
    
    
      ~DynamicFactorResults.plot_diagnostics
    
    
      ~DynamicFactorResults.predict
    
    
      ~DynamicFactorResults.pvalues
    
    
      ~DynamicFactorResults.remove_data
    
    
      ~DynamicFactorResults.resid
    
    
      ~DynamicFactorResults.save
    
    
      ~DynamicFactorResults.simulate
    
    
      ~DynamicFactorResults.summary
    
    
      ~DynamicFactorResults.t_test
    
    
      ~DynamicFactorResults.test_heteroskedasticity
    
    
      ~DynamicFactorResults.test_normality
    
    
      ~DynamicFactorResults.test_serial_correlation
    
    
      ~DynamicFactorResults.tvalues
    
    
      ~DynamicFactorResults.wald_test
    
    
      ~DynamicFactorResults.wald_test_terms
    
    
      ~DynamicFactorResults.zvalues
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~DynamicFactorResults.factors
      ~DynamicFactorResults.use_t
   
   