v0.13.5/_sources/generated/statsmodels.tsa.statespace.dynamic_factor.DynamicFactorResults.rst.txt
statsmodels.tsa.statespace.dynamic\_factor.DynamicFactorResults
===============================================================

.. currentmodule:: statsmodels.tsa.statespace.dynamic_factor

.. autoclass:: DynamicFactorResults
   :exclude-members: append,apply,conf_int,cov_params,extend,f_test,forecast,get_forecast,get_prediction,impulse_responses,info_criteria,initialize,load,news,normalized_cov_params,plot_coefficients_of_determination,plot_diagnostics,predict,remove_data,save,simulate,summary,t_test,t_test_pairwise,test_heteroskedasticity,test_normality,test_serial_correlation,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~DynamicFactorResults.append
      ~DynamicFactorResults.apply
      ~DynamicFactorResults.conf_int
      ~DynamicFactorResults.cov_params
      ~DynamicFactorResults.extend
      ~DynamicFactorResults.f_test
      ~DynamicFactorResults.forecast
      ~DynamicFactorResults.get_forecast
      ~DynamicFactorResults.get_prediction
      ~DynamicFactorResults.impulse_responses
      ~DynamicFactorResults.info_criteria
      ~DynamicFactorResults.initialize
      ~DynamicFactorResults.load
      ~DynamicFactorResults.news
      ~DynamicFactorResults.normalized_cov_params
      ~DynamicFactorResults.plot_coefficients_of_determination
      ~DynamicFactorResults.plot_diagnostics
      ~DynamicFactorResults.predict
      ~DynamicFactorResults.remove_data
      ~DynamicFactorResults.save
      ~DynamicFactorResults.simulate
      ~DynamicFactorResults.summary
      ~DynamicFactorResults.t_test
      ~DynamicFactorResults.t_test_pairwise
      ~DynamicFactorResults.test_heteroskedasticity
      ~DynamicFactorResults.test_normality
      ~DynamicFactorResults.test_serial_correlation
      ~DynamicFactorResults.wald_test
      ~DynamicFactorResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~DynamicFactorResults.aic
      ~DynamicFactorResults.aicc
      ~DynamicFactorResults.bic
      ~DynamicFactorResults.bse
      ~DynamicFactorResults.coefficients_of_determination
      ~DynamicFactorResults.cov_params_approx
      ~DynamicFactorResults.cov_params_oim
      ~DynamicFactorResults.cov_params_opg
      ~DynamicFactorResults.cov_params_robust
      ~DynamicFactorResults.cov_params_robust_approx
      ~DynamicFactorResults.cov_params_robust_oim
      ~DynamicFactorResults.factors
      ~DynamicFactorResults.fittedvalues
      ~DynamicFactorResults.hqic
      ~DynamicFactorResults.llf
      ~DynamicFactorResults.llf_obs
      ~DynamicFactorResults.loglikelihood_burn
      ~DynamicFactorResults.mae
      ~DynamicFactorResults.mse
      ~DynamicFactorResults.pvalues
      ~DynamicFactorResults.resid
      ~DynamicFactorResults.sse
      ~DynamicFactorResults.states
      ~DynamicFactorResults.tvalues
      ~DynamicFactorResults.use_t
      ~DynamicFactorResults.zvalues
   
   
   